@@ -1,5 +1,10 @@
 2008-01-07	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	* rtems/src/eventseize.c, rtems/src/eventtimeout.c: Minor style clean
+	up.
+
+2008-01-07	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	* posix/src/pthreadcreate.c: Add commit.
 	* posix/src/pthreadinitthreads.c: Fix line length.
 
